--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -136,21 +136,25 @@ section {
   background-color: #f3f3f3;
 }
 
-/* Projects section styles */
-#projects {
+/* Projects, Features section styles */
+#projects,
+#features {
   padding: 80px 0;
   text-align: center;
 }
 
-#projects a {
+#projects a,
+#features a {
   text-decoration: none;
   color: inherit;
 }
-#projects a:hover {
+#projects a:hover,
+#features a:hover {
   color: #0056b3; /* Change link color on hover */
 }
 
-.project {
+.project,
+.feature {
   margin-bottom: 40px; /* Add some spacing between project cards */
   padding: 20px;
   background-color: #fff;
@@ -158,22 +162,26 @@ section {
   transition: transform 0.3s ease; /* Add a smooth transition effect */
 }
 
-.project:hover {
+.project:hover,
+.feature:hover {
   transform: translateY(-5px); /* Add a slight lift effect on hover */
 }
 
-.project img {
+.project img,
+.feature img {
   max-width: 100%;
   height: auto;
   margin-bottom: 10px; /* Add spacing below the project image */
 }
 
-.project h3 {
+.project h3,
+.feature h3 {
   font-size: 1.5rem;
   margin-bottom: 10px;
 }
 
-.project p {
+.project p,
+.feature p {
   font-size: 1.1rem;
   line-height: 1.6;
   color: #555;
