--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -13,6 +14,12 @@ h1 {
 h2 {
   text-align: center;
   margin-bottom: 50px;
+}
+
+h3 {
+  text-align: center;
+  font-size: 20px;
+  margin: 0;
 }
 
 nav {
@@ -28,6 +35,7 @@ nav a {
   color: #fff;
   text-decoration: none;
   margin: 0 10px;
+  font-size: 13px;
 }
 
 nav a.active {
@@ -277,12 +285,67 @@ footer p {
   object-fit: cover;
   width: 240px;
   clip-path: circle(45%);
+}
 
-  margin-bottom: 20px;
+.profile p {
+  margin: 0;
+  font-size: 10px;
+}
+
+.profile_textcontainer {
+  margin-top: 10px;
 }
 
 .skills {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
+}
+
+.skill {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.skill-name {
+  flex: 0 0 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  color: #fff;
+  background-color: rgb(76, 175, 80, 0.6);
+}
+
+.progress {
+  flex-grow: 1;
+  background-color: #e0e0e0;
+  border-radius: 3px;
+  height: 20px;
+  overflow: hidden;
+  position: relative;
+}
+
+.progress-bar {
+  background-color: #4caf50;
+  height: 100%;
+  transition: width 0.4s ease;
+}
+
+.progress-bar span {
+  display: none;
+  position: absolute;
+  top: 1px;
+  right: 10px;
+  color: rgb(0, 0, 0, 0.4);
+  font-size: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .progress-bar span {
+    display: block;
+  }
 }
