--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -9,11 +9,29 @@ body {
 
 h1 {
   text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  position: relative;
 }
 
 h2 {
   text-align: center;
+  margin-top: 50px;
   margin-bottom: 50px;
+  position: relative;
+  display: inline-block;
+}
+
+h1::after,
+h2::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -20px;
+  width: 70px;
+  height: 4px;
+  background-color: #000;
+  transform: translateX(-50%);
 }
 
 h3 {
@@ -27,7 +45,6 @@ nav {
   justify-content: space-between;
   align-items: center;
   background-color: #333;
-  padding: 2px 2px;
   text-align: left;
 }
 
@@ -47,7 +64,9 @@ nav a:hover {
 }
 
 .navbar {
+  width: 100%;
   padding: 0.5rem;
+  border-bottom: 3px solid #4caf50;
 }
 
 .portfolio {
@@ -256,6 +275,7 @@ footer p {
 }
 
 .icons {
+  margin-top: 2rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -279,7 +299,6 @@ footer p {
 
 .icon-item img {
   width: 70px;
-  margin-bottom: 10px;
   color: #2c3a47;
 }
 
